# pySigma-backend-clickhouse

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  main.py  print-coverage.py  pyproject.toml
.github/workflows/: cov.yml  pypi.yml  release.yml  test.yml
scripts/: release.sh
sigma/backends/clickhouse/: __init__.py  clickhouse.py
sigma/pipelines/clickhouse/: __init__.py  clickhouse.py
tests/: test_backend_clickhouse.py
