[project]
name = "pysigma-backend-clickhouse"
version = "0.3.3"
description = "Clickhouse backend for sigma"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pysigma>=1.0.0",
    "pyyaml>=6.0",
]
authors = [
    { name = "souzo", email = "me@souzo.me" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sigma"]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[dependency-groups]
dev = [
    "git-cliff>=2.13.1",
    "pytest>=9.0.3",
    "sigma-cli>=3.0.2",
    "pytest-cov>=7.1.0",
    "coverage>=7.14.0",
]
